[package]
name = "slim-live"
description = "Live video encoder"
repository = "https://github.com/rafaelcaricio/slim-live"
authors = ["Rafael Caricio <rafael@caricio.com>"]
license = "MPL-2.0"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_18"] }
gst-plugin-hlssink3 = { package = "gst-plugin-hlssink3", git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" } # path = "../gst-plugins-rs/net/hlssink3" }
anyhow = "1.0.51"
